--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="java.jpg" alt="java"
+style="width:50%;max-width:400px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
 </body>
-</html>
+</html> 
