--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div><img src="java.jpg" alt="java" style="width:50%;max-width:400px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<div><img src="prog.jpg" alt="programuotojai" style="width:50%;max-width:400px"></div>
+<div><img src="https://preview.redd.it/steal-what-is-stolen-v0-hwurhp7crzf81.png?width=640&crop=smart&auto=webp&s=93eb78d1624483625559fb3313635b29d52cb475" alt="programuotojai" style="width:50%;max-width:400px"></div>
 
 </body>
 </html> 
